@@ -258,9 +258,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.16</version>
 				<configuration>
-				    <jvmFlags>
+				    <!-- <jvmFlags>
 				    	<jvmFlag>-XX:MaxPermSize=512m</jvmFlag>
-				    </jvmFlags>
+				    </jvmFlags>-->
+				    <argLine>-Xms712m -Xmx712m -XX:MaxPermSize=512m</argLine>  
 				    <!-- <fork>true</fork>-->
 				    <!-- <argLine>-Xms512m</argLine>
 				    <argLine>-Xmx1024m</argLine>
